--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,14 @@
   </head>
   <body>
     <%= render 'layouts/header' %>
-    <div class="container">
+    
+      <div class="container">
       <% flash.each do |message_type, msg| %>
-        <div class="alert alert-<%= message_type %>"><%= msg %></div>
+        <div class="alert alert-<%= message_type %>"><%= msg.html_safe %></div>
       <% end %>
       <%= yield %>
       <%= debug(params) if Rails.env.development? %>
+    
     </div>
   </body>
 </html>
