--- a/app/views/attendances/edit_one_month.html.erb
+++ b/app/views/attendances/edit_one_month.html.erb
@@ -16,9 +16,19 @@
       <tbody>
         <% @attendances.each do |day| %>
   <%= f.fields_for "attendances[]", day do |attendance| %>
+  
+  <% 
+    css_class = 
+    case $days_of_the_week[day.worked_on.wday]
+    when '土' then
+      'text-primary'
+    when '日' then
+      'text-danger'
+    end
+  %>
     <tr>
       <td><%= l(day.worked_on, format: :short) %></td>
-      <td><%= $days_of_the_week[day.worked_on.wday] %></td>
+      <td class="<%= css_class %>"><%= $days_of_the_week[day.worked_on.wday] %></td>
       <% if !current_user.admin? && (Date.current < day.worked_on) %>
         <td><%= attendance.time_field :started_at, readonly: true, class: "form-control" %></td>
         <td><%= attendance.time_field :finished_at, readonly: true, class: "form-control" %></td>
