--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -34,14 +34,27 @@
         <th>退勤時間</th>
         <th>在社時間</th>
         <th>備考</th>
+        <th>残業指示</th>
+        <th>指示書</th>
       </tr>
     </thead>
 
     <tbody>
  <% @attendances.each do |day| %>
+ 
+ <% 
+    css_class = 
+    case $days_of_the_week[day.worked_on.wday]
+    when '土' then
+      'text-primary'
+    when '日' then
+      'text-danger'
+    end
+  %>
+ 
   <tr>
     <td><%= l(day.worked_on, format: :short) %></td>
-    <td><%= $days_of_the_week[day.worked_on.wday] %></td>
+      <td class="<%= css_class %>"><%= $days_of_the_week[day.worked_on.wday] %></td>
     <td>
       <% if btn_text = attendance_state(day) %>
         <%= link_to "#{btn_text}登録", user_attendance_path(@user, day), method: :patch, class: "btn btn-primary btn-attendance" %>
