--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,24 @@
 <% provide(:title, 'All Users') %>
-<h1>ユーザー一覧</h1>
+
+
+<!--ユーザー名による絞り込み tuika09 510-->
+<% if params[:name].present? %>
+　<h1>検索結果</h1>
+<% else %>
+　<h1>ユーザー一覧</h1>
+<% end %>
+
 
 <div class="col-md-10 col-md-offset-1">
   <%= will_paginate %>
+  
+  　<div align="right">
+　  <%= form_tag( users_path, method: "get") do %>
+　    <% label_tag :name %><%= text_field_tag :name, params[:name] %>
+      <%= submit_tag "ユーザー名検索",class: "btn btn-success"  %>
+    <% end %>
+    </div>
+  
   <table class="table table-condensed table-hover" id="table-users">
     <thead>
       <tr>
