--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,22 +27,28 @@
   <table class="table table-bordered table-condensed table-hover" id="table-attendances">
     <thead>
       <tr>
-        <th>日付</th>
-        <th>曜日</th>
-        <th>勤怠登録</th>
-        <th>出勤時間</th>
-        <th>退勤時間</th>
-        <th>在社時間</th>
-        <th>備考</th>
-        <th>残業指示</th>
-        <th>指示書</th>
+        <th rowspan="2">日付</th>
+        <th rowspan="2">曜日</th>
+        <th colspan="3">出勤時間</th>
+        <th colspan="3">退勤時間</th>
+        <th rowspan="2">在社時間</th>
+        <th rowspan="2">備考</th>
+      </tr>
+      <tr>
+      <th>時</th>
+      <th>分</th>
+      <th></th>
+      <th>時</th>
+      <th>分</th>
+      <th></th>
       </tr>
     </thead>
-
     <tbody>
+
+   
  <% @attendances.each do |day| %>
  
- <% 
+ 　<% 
     css_class = 
     case $days_of_the_week[day.worked_on.wday]
     when '土' then
@@ -52,16 +58,32 @@
     end
   %>
  
+ 
   <tr>
     <td><%= l(day.worked_on, format: :short) %></td>
-      <td class="<%= css_class %>"><%= $days_of_the_week[day.worked_on.wday] %></td>
+    
+    <td class="<%= css_class %>"><%= $days_of_the_week[day.worked_on.wday] %></td>
+   
+    
+    
+    
+    
+    <td><%= format_hour(day.started_at) if day.started_at.present? %></td>
+    <td><%= format_min(day.started_at) if day.started_at.present? %></td>
     <td>
-      <% if btn_text = attendance_state(day) %>
-        <%= link_to "#{btn_text}登録", user_attendance_path(@user, day), method: :patch, class: "btn btn-primary btn-attendance" %>
+      <% if btn_text = attendance_state(day) && day.started_at.blank? %>
+        <%= link_to "出勤登録", user_attendance_path(@user, day), method: :patch, class: "btn btn-primary btn-attendance" %>
       <% end %>
     </td>
-    <td><%= l(day.started_at, format: :time) if day.started_at.present? %></td>
-    <td><%= l(day.finished_at, format: :time) if day.finished_at.present? %></td>
+    
+    <td><%= format_hour(day.finished_at) if day.finished_at.present? %></td>
+    <td><%= format_min(day.finished_at) if day.finished_at.present? %></td>
+    <td>
+      <% if btn_text = attendance_state(day) && day.started_at.present? &&  day.finished_at.blank? %>
+        <%= link_to "退勤登録", user_attendance_path(@user, day), method: :patch, class: "btn btn-primary btn-attendance" %>
+      <% end %>
+    </td>
+    <!--<td></td>-->
     <td>
       <% if day.started_at.present? && day.finished_at.present? %>
         <%= str_times = working_times(day.started_at, day.finished_at) %>
@@ -71,6 +93,9 @@
     <td><%= day.note %></td>
   </tr>
 <% end %>
+   
+    
+    
     </tbody>
 
     <tfoot>
