勤怠表示１５分在社

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -86,7 +86,7 @@
     <!--<td></td>-->
     <td>
       <% if day.started_at.present? && day.finished_at.present? %>
-        <%= str_times = working_times(day.started_at, day.finished_at) %>
+        <%= str_times = working_times(day.started_at.floor_to(15.minutes),day.finished_at.floor_to(15.minutes)) %>
         <% @total_working_times = @total_working_times.to_f + str_times.to_f %>
       <% end %>
     </td>
