ログイン表記

--- a/app/views/attendances/edit_one_month.html.erb
+++ b/app/views/attendances/edit_one_month.html.erb
@@ -37,11 +37,15 @@
         <td><%= attendance.time_field :finished_at, class: "form-control" %></td>
       <% end %>
       <td>
-        <% if day.started_at.present? && day.finished_at.present? %>
+       <% if day.started_at.present? && day.finished_at.present? %>
           <%= working_times(day.started_at, day.finished_at) %>
-        <% end %>
+       <% end %>
       </td>
-      <td><%= attendance.text_field :note, class: "form-control" %></td>
+       <% if (Date.current < day.worked_on) %>
+     　 <td><%= attendance.text_field :note,readonly: true, class: "form-control" %></td>
+     　 <% else %>
+       <td><%= attendance.text_field :note, class: "form-control" %></td>
+       <% end %>
     </tr>
   <% end %>
 <% end %>
