--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -2,5 +2,9 @@
 <div class="center jumbotron">
   <h1>勤怠管理システム</h1>
   <p>このアプリケーションでは、登録されたユーザーの勤怠情報を閲覧・登録・編集することができます。</p>
+  <% if logged_in? %>
+ <div class=" primary ">ログイン状態です</div>
+   <% else %>
   <%= link_to "ユーザー登録", signup_path, class: "btn btn-lg btn-primary" %>
+  <% end %>
 </div>
